--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 __pycache__/
 .idea/
+riscv_characterization/repo_changes/dory-mod/*.patch
 *.pth
 !neural_networks/models/.gitkeep
 !neural_networks/adapt/cpu-kernels-8x8/axx_mults_8x8/.gitkeep
